# breadboard-vna

./: .gitignore  CMakeLists.txt  FT6206.c  FT6206.h  ILI9341.c  ILI9341.h  README.md  SPIPIO.pio.h  TFTMaster.c  TouchScreen.c  ad9834.c  ad9834.h  adc_sampling.c  adc_sampling.h  blinky.pio  build.ninja  cmake_install.cmake  complex_math.h  losquare.pio  main.c  meow_fft.c  meow_fft.h  pio.c  pio.h  receiver.c  receiver.h  square.pio  vna.c  vna.h  vnasweeps.c  vnasweeps.h
UNUSED/: TFTMaster.c  ts_lcd.c  ts_lcd.h
enclosure/: LaserCutEnclosure.20251207-151714.FCBak  LaserCutEnclosure.FCStd
hardware/SuperVNA/: AD626.kicad_sym  SuperVNA.kicad_pro  SuperVNA.kicad_sch  analog.kicad_sch  sym-lib-table  ~SuperVNA.kicad_sch.lck
pico-sdk/: cmake_install.cmake
pico-sdk/docs/: cmake_install.cmake
pico-sdk/src/: cmake_install.cmake
pico-sdk/src/common/: cmake_install.cmake
pico-sdk/src/common/boot_picoboot/: cmake_install.cmake
pico-sdk/src/common/boot_uf2/: cmake_install.cmake
pico-sdk/src/common/pico_base/: cmake_install.cmake
pico-sdk/src/common/pico_binary_info/: cmake_install.cmake
pico-sdk/src/common/pico_bit_ops/: cmake_install.cmake
pico-sdk/src/common/pico_divider/: cmake_install.cmake
pico-sdk/src/common/pico_stdlib/: cmake_install.cmake
pico-sdk/src/common/pico_sync/: cmake_install.cmake
pico-sdk/src/common/pico_time/: cmake_install.cmake
pico-sdk/src/common/pico_usb_reset_interface/: cmake_install.cmake
pico-sdk/src/rp2040/: cmake_install.cmake
pico-sdk/src/rp2_common/: cmake_install.cmake
pico-sdk/tools/: cmake_install.cmake
(+63 files in other folders)
